# NVIDIA-Maxine-SDK

./: .gitignore  README.md
OSS/: CMakeLists.txt
OSS/samples/BodyTrack/: run.bat
OSS/samples/ExpressionApp/: Readme.txt  imgui.ini  run.bat
OSS/samples/GazeRedirect/: run.bat
OSS/source/: CMakeLists.txt
OSS/source/BodyTrack/: BodyEngine.cpp  BodyEngine.h  BodyTrack.cpp  BodyTrack.h  CMakeLists.txt  DoApp.h  Timer.cpp
OSS/source/FaceTrack/: CMakeLists.txt  FaceTrack.cpp  run.bat
OSS/source/GazeRedirect/: CMakeLists.txt  GazeEngine.cpp  GazeEngine.h  GazeRedirect.cpp  GazeRedirect.h  Timer.h
OSS/source/utils/SharedMem/: CHOP_SharedMemHeader.h  UT_Mutex.h  UT_SharedMem.cpp
_testvideos/: .gitignore  SharedMemTest.14.toe  SharedMemTest.24.toe  SharedMemTest.toe
_testvideos/Backup/: SharedMemTest.1.toe
